--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container">
         <div class="row bg-info">
             <div class="col-12">
-                <h1>Haha</h1>
+                <button type="button" class="btn btn-primary">
+                    <i class="fa fa-circle"></i>
+                </button>
             </div>
         </div>
         <section-row></section-row>
