--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
 </head>
 
 <body>
     <div class="container">
-        <div class="row bg-info">
+        <div class="row">
             <div class="col-12">
                 <button type="button" class="btn btn-primary">
                     <i class="fa fa-circle"></i>
@@ -18,6 +20,11 @@
             </div>
         </div>
         <section-row></section-row>
+        <section-container>
+            <button type="button" class="btn btn-primary">
+                <i class="fa fa-circle"></i>
+            </button>
+        </section-container>
     </div>
 </body>
 
