--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,12 @@
                 </button>
             </div>
         </div>
-        <section-row></section-row>
         <section-container>
-            <button type="button" class="btn btn-primary">
-                <i class="fa fa-circle"></i>
-            </button>
+            <section-row>
+                <button type="button" class="btn btn-primary">
+                    <i class="fa fa-plus"></i> <span>Submit</span>
+                </button>
+            </section-row>
         </section-container>
     </div>
 </body>
