--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row d-none">
             <div class="col-12">
                 <button type="button" class="btn btn-primary">
                     <i class="fa fa-circle"></i>
@@ -21,11 +21,31 @@
         </div>
         <section-container>
             <section-row>
-                <button type="button" class="btn btn-primary">
-                    <i class="fa fa-plus"></i> <span>Submit</span>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    <i class="fa fa-plus"></i> <span>Open Modal</span>
                 </button>
             </section-row>
         </section-container>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
