--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <create-request></create-request>
+    <h2>publish isActive <span data-bind="text: isActive"></span></h2>
+    <h1>Title <span data-bind="text: title"></span></h1>
+    <button class="btn btn-primary" data-bind="click: update">Update From Index</button>
     <div class="container">
         <div class="row d-none">
             <div class="col-12">
