--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
                 </button>
             </div>
         </div>
+        <div class="row">
+                <div class="col-12">
+                    <modal-sample></modal-sample>
+                </div>
+            </div>
         <section-container>
             <section-row>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -51,6 +56,7 @@
             </div>
         </div>
     </div>
+    <div class="modal-backdrop fade d-none"></div>
 </body>
 
 </html>
