update modal sample

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <create-request></create-request>
     <h2>publish isActive <span data-bind="text: isActive"></span></h2>
     <h1>Title <span data-bind="text: title"></span></h1>
     <button class="btn btn-primary" data-bind="click: update">Update From Index</button>
@@ -23,7 +22,7 @@
                 </button>
             </div>
         </div>
-        <div class="row">
+        <div class="row my-3">
                 <div class="col-12">
                     <modal-sample></modal-sample>
                 </div>
