--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
-    <h2>publish isActive <span data-bind="text: isActive"></span></h2>
-    <h1>Title <span data-bind="text: title"></span></h1>
-    <button class="btn btn-primary" data-bind="click: update">Update From Index</button>
     <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h2>publish isActive <span data-bind="text: isActive"></span></h2>
+                <h1>Title <span data-bind="text: title"></span></h1>
+                <button class="btn btn-primary" data-bind="click: update">Update From Index</button>
+            </div>
+        </div>
         <div class="row d-none">
             <div class="col-12">
                 <button type="button" class="btn btn-primary">
@@ -23,11 +27,11 @@
             </div>
         </div>
         <div class="row my-3">
-                <div class="col-12">
-                    <modal-sample></modal-sample>
-                </div>
+            <div class="col-12">
+                <modal-sample></modal-sample>
             </div>
-        <section-container>
+        </div>
+        <section-container class="d-none">
             <section-row>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                     <i class="fa fa-plus"></i> <span>Open Modal</span>
