--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <scope-of-work></scope-of-work>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <h2>publish isActive <span data-bind="text: isActive"></span></h2>
